<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".page.PageFragment">

    <ImageButton
        android:id="@+id/go_edit_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ic_baseline_add_circle_outline_24"
        android:backgroundTint="#fff"
        android:contentDescription="+" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <LinearLayout
            android:id="@+id/form_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/title1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/title1"/>
            <TextView
                android:id="@+id/title1_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="40dp"
                android:textSize="22sp"
                android:text="@string/title1_1"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/form_1_1_recyclerview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="80dp"/>
            <TextView
                android:id="@+id/title1_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="40dp"
                android:textSize="22sp"
                android:text="@string/title1_2"/>
            <TextView
                android:id="@+id/title1_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="40dp"
                android:textSize="22sp"
                android:text="@string/title1_3"/>
            <TextView
                android:id="@+id/title2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/title2"/>
            <TextView
                android:id="@+id/title2_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="40dp"
                android:textSize="22sp"
                android:text="@string/title2_1"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/form_2_1_recyclerview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="80dp"/>
            <TextView
                android:id="@+id/title2_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="40dp"
                android:textSize="22sp"
                android:text="@string/title2_2"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/form_2_2_recyclerview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="80dp"/>
            <TextView
                android:id="@+id/title2_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="40dp"
                android:textSize="22sp"
                android:text="@string/title2_3"/>
            <TextView
                android:id="@+id/title3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/title3"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/form_3_recyclerview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="80dp"/>
            <TextView
                android:id="@+id/title4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/title4"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/form_4_recyclerview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="80dp"/>
            <TextView
                android:id="@+id/title5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/title5"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/form_5_recyclerview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="80dp"/>
            <TextView
                android:id="@+id/title6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/title6"/>
            <TextView
                android:id="@+id/title7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/title7"/>
            <Button
                android:id="@+id/go_edit_button_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="修改"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>